<resources>
    <string name="app_name">Hair Salon</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="sign_in">SIGN IN</string>
    <string name="sign_up">Sign up</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="address">Address</string>
    <string name="email">Email</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="submit">Submit</string>
    <string name="menu_appointments">My Appointments</string>
    <string name="menu_all_services">All Services</string>
    <string name="menu_contactus">Contact Us</string>
    <string name="menu_logout">Logout</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="login_admin"><b><u>Admin Login</u></b></string>
    <string name="pick_place">Pick a place</string>
    <string name="select_location">Please select a location!</string>
    <string name="enter_first_name">Please enter the first name!</string>
    <string name="enter_select_image">Please select your image</string>
    <string name="enter_last_name">Please select your last name!</string>
    <string name="enter_email">Please enter your email address!</string>
    <string name="enter_date_birth">Please select your date of birth!</string>
    <string name="enter_mobile_number">Please select your mobile number!</string>
    <string name="no_data">No appointments found</string>
    <string name="contact_us_title">A member of staff will be in touch with you as soon as possible</string>
    <string name="name">Name</string>
    <string name="your_message">Your message</string>
    <string name="email_address">Email: <u>Enquires@hairsalon.com</u></string>
    <string name="mobile">Telephone: <u> +44 0000000000</u></string>
    <string name="home_page_title">We combine artistic interpretation, knowledge, and skill with classic, elegant, and modern looks to create the perfect look for you. Whether you’re coming for makeup, wax, lashes or other services. BOMOR Cosmetics offer the best beauty services in town. We are based in Newcastle.</string>
    <string name="top_services">Top Services</string>
    <string name="our_services">Our Services</string>
    <string name="available_appointments">Available Appointments</string>
    <string name="no_internet_connection">No internet connection!</string>
    <string name="sign_in_cancelled">"Sign in cancelled "</string>
    <string name="unknown_error">Unknown error</string>
    <string name="verify_desc">We have sent you an SMS with a code to your phone number</string>
    <string name="verify">Verify</string>
    <string name="error_complete_verification_code">Please complete the OTP code!</string>
    <string name="update_profile">Update Profile</string>
    <string name="service_select">Choose a service</string>
    <string name="all_requests">Available requests</string>
    <string name="add">Add</string>

    <string-array name="services_list1">
        <item>Hair</item>
        <item>Shaves</item>
        <item>Nails</item>
        <item>Waxing</item>
        <item>Facials</item>
        <item>Hair Removal</item>
        <item>Hot Towel</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
