<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:padding="@dimen/_20sdp"
    tools:context="uk.ac.tees.S6145076.HairSaloon.main_ui.ContactUs.ContactUsFragment">


    <TextView
        android:id="@+id/contact_us_toolbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:textStyle="bold"
        android:gravity="center_horizontal"
        android:text="@string/contact_us_title"
        android:textColor="@color/black"
        android:textSize="@dimen/font_16" />

    <LinearLayout
        android:id="@+id/contact_us_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/contact_us_toolbar"
        android:layout_marginTop="@dimen/_15sdp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/edit_first_name"
            style="@style/EditText_STYLE"
            android:drawableStart="@drawable/user_name"
            android:drawableTint="@color/gray5"
            android:hint="@string/name" />

        <EditText
            android:id="@+id/edit_mobile"
            style="@style/EditText_STYLE"
            android:drawableStart="@drawable/ic_mobile"
            android:drawableTint="@color/gray5"
            android:hint="@string/mobile_number" />

        <EditText
            android:id="@+id/edit_message"
            style="@style/EditText_STYLE"
            android:drawableTint="@color/gray5"
            android:gravity="top"
            android:hint="@string/your_message"
            android:minHeight="@dimen/_110sdp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/font_16"
            android:layout_marginTop="@dimen/_20sdp"
            android:textColor="@color/blue"
            android:gravity="center_horizontal"
            android:text="@string/email_address" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/font_16"
            android:layout_marginTop="@dimen/_20sdp"
            android:textColor="@color/blue"
            android:gravity="center_horizontal"
            android:text="@string/mobile" />
    </LinearLayout>

    <Button
        android:id="@+id/contact_us_button"
        android:layout_width="@dimen/_120sdp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_marginBottom="@dimen/_10sdp"
        android:background="@drawable/rounded_button_gray"
        android:text="@string/submit"
        android:textColor="@color/black"
        android:textSize="@dimen/font_14" />
</RelativeLayout>
