<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:id="@+id/menu_group1"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_appointments"
            android:icon="@drawable/ic_bookings"
            android:title="@string/menu_appointments" />
        <item
            android:id="@+id/nav_contact_us"
            android:icon="@drawable/ic_contact_us"
            android:title="@string/menu_contactus" />
    </group>

    <group
        android:id="@+id/menu_group2"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_logout"
            android:title="@string/menu_logout" />
    </group>
</menu>